--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,5 +1,8 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="de.integrata.training.opentext.controller.App"
-	xmlns:html="http://www.w3.org/1999/xhtml">
+<mvc:View 
+	controllerName="de.integrata.training.opentext.controller.App"
+	xmlns="sap.m" 
+	xmlns:core="sap.ui.core" 
+	xmlns:mvc="sap.ui.core.mvc" >
 	<App>
 		<pages>
 			<Page title="Hallo Welt">
