--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -3,7 +3,7 @@
 	xmlns="sap.m"
 	xmlns:core="sap.ui.core" 
 	xmlns:mvc="sap.ui.core.mvc">
-	<Page title="DetailPage">
+	<Page title="{i18n>DetailPageTitle}">
 		<content></content>
 	</Page>
 </mvc:View>
