--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -4,6 +4,14 @@
 	xmlns:core="sap.ui.core" 
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page title="{i18n>MasterPageTitle}">
-		<content></content>
+		<content>
+			<List>
+				<items>
+					<StandardListItem title="Titel 1" description="Beschreibung 1" type="Active" press="onItemPress"/>
+					<StandardListItem title="Titel 2" description="Beschreibung 2"/>
+					<StandardListItem title="Titel 3" description="Beschreibung 3"/>
+				</items>
+			</List>
+		</content>
 	</Page>
 </mvc:View>
