--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -5,14 +5,12 @@
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page title="{i18n>DetailPageTitle}">
 		<content>
-			<core:HTML id="IdHtml"/>
+			<ObjectHeader title="{Custname}">
+				<attributes>
+					<ObjectAttribute title="{i18n>City}" text="{City}"/>
+					<ObjectAttribute title="{i18n>Street}" text="{Street}"/>
+				</attributes>
+			</ObjectHeader>
 		</content>
-		<footer>
-			<Bar>
-				<contentMiddle>
-					<Button text="Lade HTML" press="loadHtml"/>
-				</contentMiddle>
-			</Bar>
-		</footer>
 	</Page>
 </mvc:View>
