--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -5,11 +5,9 @@
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page title="{i18n>MasterPageTitle}">
 		<content>
-			<List>
+			<List items="{/FlugkundeSet}">
 				<items>
-					<StandardListItem title="Titel 1" description="Beschreibung 1" type="Active" press="onItemPress"/>
-					<StandardListItem title="Titel 2" description="Beschreibung 2"/>
-					<StandardListItem title="Titel 3" description="Beschreibung 3"/>
+					<StandardListItem title="{Custname}" description="{City}" type="Active" press="onItemPress"/>
 				</items>
 			</List>
 		</content>
